--- a/client/k_admin.html
+++ b/client/k_admin.html
@@ -34,17 +34,20 @@
 					<div class="col-sm-12">
 						<div class="panel" id="kAdminActionCenter">
 							<div class="panel-body">
-								<h3>Action Center</h3>
 								{{#if actionCenterCheck 'create'}}
+									<h3>Create</h3>
 									{{> quickForm collection=currentCollection id="kAdminForm" type="insert"}}
 								{{/if}}
 								{{#if actionCenterCheck 'read'}}
-									{{ currentDoc }}
+									<h3>View</h3>
+									<pre>{{ formattedCurrentDoc }}</pre>
 								{{/if}}
 								{{#if actionCenterCheck 'update'}}
+									<h3>Update</h3>
 									{{> quickForm collection=currentCollection id="kAdminForm" type="update" doc=currentDoc}}
 								{{/if}}
 								{{#if actionCenterCheck 'delete'}}
+									<h3>Delete</h3>
 									{{#quickRemoveButton collection=currentCollection _id=currentDoc._id onSuccess=deleteSuccess onError=deleteError class="btn btn-danger btn-block"}}
 										Confirm Deletion
 									{{/quickRemoveButton}}
