Verbose (Django inspired) names for collections in dropdown and a much awaited regex and regex case insensitive search.

--- a/client/k_admin.html
+++ b/client/k_admin.html
@@ -31,7 +31,7 @@
 			</button>
 			<ul class="dropdown-menu dropdown-menu-right" role="menu" id="kAdminSelector">
 				{{#each collections}}
-					<li><a href="#" data-collection="{{ this }}">{{ this }}</a></li>
+					<li><a href="#" data-collection="{{ this }}">{{ getVerbose this }}</a></li>
 				{{/each}}
 				<li class="divider"></li>
 				<li><a href="#" data-collection="">Reset</a></li>
